--- a/_sass/_includes/_footer.scss
+++ b/_sass/_includes/_footer.scss
@@ -1,78 +1,90 @@
 // - - - - - - - - - - - - - - - - - -
-
-// Footer
-
+// FooterF
 // - - - - - - - - - - - - - - - - - -
 
-
-
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - Footer
+body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background-color: whitesmoke; // Ensure the background color matches your footer
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; // Ensure body takes the full height of the viewport
+}
+
+main {
+    flex: 1;
+}
 
 .footer {
-	@include transition(all 0.4s ease-in-out 0.8s);
-	margin-top: 20px;
+    @include transition(all 0.4s ease-in-out 0.8s);
+    margin-top: 20px;
+    background-color: whitesmoke;
 
-	.wrap {
-		max-width: 100%;
+    .wrap {
+        max-width: 100%;
 
-		@include mq(tabletp) {
-			padding: 0 20px;
-		}
-	}
+        @include mq(tabletp) {
+            padding: 0 20px;
+        }
+    }
 }
 
 .footer__content {
-	border-top: 2px solid $background-alt-color;
-	padding: 20px 0 24px;
+    border-top: 2px solid $background-alt-color;
+    padding: 20px 0 24px;
 }
 
 .footer__text {
-	color: $text-medium-color;
-	font-weight: $bold-weight;
+    color: $text_light_color;
+    font-weight: $bold-weight;
 }
 
 .footer__copyright {
-	display: block;
-	margin-top: 10px;
-	font-size: 13px;
-	color: $text-light-color;
+    display: block;
+    margin-top: 10px;
+    font-size: 13px;
+    color: $text-light-color;
 
-	a {
-		margin-left: 10px;
-		color: $text-light-color;
-		font-weight: $regular-weight;
+    a {
+        margin-left: 10px;
+        color: $text-light-color;
+        font-weight: $regular-weight;
 
-		&:hover {
-			color: $text-medium-color;
-		}
-	}
+        &:hover {
+            color: $text-medium-color;
+        }
+    }
 
-	span {
-		margin-top: 10px;
-		display: inline-block;
-	}
+    span {
+        margin-top: 10px;
+        display: inline-block;
+    }
 
-	@include mq(tabletp) {
-
-		span {
-			margin-top: 0;
-		}
-	}
+    @include mq(tabletp) {
+        span {
+            margin-top: 0;
+        }
+    }
 }
 
 .footer .socials {
-	margin-top: 20px;
-	height: 30px;
+    margin-top: 20px;
+    height: 30px;
 
-	@include mq(tabletp) {
-		height: 40px;
-	}
+    @include mq(tabletp) {
+        height: 40px;
+    }
 
-	@include mq(laptop) {
-		position: absolute;
-		top: 50%;
-		right: $grid-spacing;
-		margin-top: 0;
-		@include translate(0,-50%);
-	}
+    @include mq(laptop) {
+        position: absolute;
+        top: 50%;
+        right: $grid-spacing;
+        margin-top: 0;
+        @include translate(0,-50%);
+    }
 }
