--- a/_sass/_includes/_header.scss
+++ b/_sass/_includes/_header.scss
@@ -10,6 +10,7 @@
 
 .header {
 	padding: 20px 0;
+	background-color: black;
 
 	.wrap {
 		max-width: 100%;
@@ -41,8 +42,8 @@
 	font-weight: $sitetitle-weight;
 	letter-spacing: $sitetitle-spacing;
 	line-height: 1;
-	color: $text-dark-color;
-	font-family: 'Great-vibes', cursive; /* Specify the font you want */
+	color: white;
+	font-family: 'Futura', sans-serif; /* Specify the font you want */
 
 	&:hover {
 		color: $accent-color;
@@ -80,7 +81,7 @@
 	cursor: pointer;
 	font-size: 15px;
 	line-height: 20px;
-	color: $text-dark-color;
+	color: $text-light-color;
 	
 	@include mq(tabletp) {
 		display: none;
@@ -192,13 +193,13 @@
 }
 
 .menu__list__item__link {
-	font-size: $menu-small;
-	font-weight: $menu-weight;
-	color: $overlay-text-color;
+	font-size: $menu-large !important;
+	font-weight: $menu-weight; 
+	color: $overlay-text-color !important;
 	padding: 10px 0;
 
 	&:hover {
-		color: $overlay-accent-color;
+		color: $overlay-accent-color !important;
 	}
 
 	@include mq(tabletp) {
